examples/compiler_errors/adversarial/common_dev_mistakes/UnknownBaseMemberTypo.flx
// expect: compile_error
// expect-error: E013

module UnknownBaseMemberTypo {
    fn bad() -> Unit with IO {
        Flow.prnit("x")
    }
}
